[gd_scene load_steps=3 format=3 uid="uid://bcunmptpppplf"]

[ext_resource type="Script" uid="uid://b6rev26g4b1gf" path="res://menu_principal.gd" id="1_bj1uy"]
[ext_resource type="Texture2D" uid="uid://dvvb6ogbngva1" path="res://1.png" id="2_gmcsc"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 565.0
offset_top = 306.0
offset_right = 605.0
offset_bottom = 346.0
script = ExtResource("1_bj1uy")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(9.99998, 14.5)
scale = Vector2(2, 1.97839)
texture = ExtResource("2_gmcsc")

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenuButtons"]
layout_mode = 2
text = "EL MEJOR AMIGO"
horizontal_alignment = 1

[node name="BotonJugar" type="Button" parent="MainMenuButtons"]
layout_mode = 2
text = "JUGAR"

[node name="BotonOpciones" type="Button" parent="MainMenuButtons"]
layout_mode = 2
text = "OPCIONES"

[node name="BotonSalir" type="Button" parent="MainMenuButtons"]
layout_mode = 2
text = "SALIR
"

[node name="OptionsMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
text = "VOLUMEN"

[node name="VolumeSlider" type="HSlider" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="BackButton" type="Button" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
text = "VOLVER"

[connection signal="pressed" from="MainMenuButtons/BotonJugar" to="." method="_on_boton_jugar_pressed"]
[connection signal="pressed" from="MainMenuButtons/BotonOpciones" to="." method="_on_boton_opciones_pressed"]
[connection signal="pressed" from="MainMenuButtons/BotonSalir" to="." method="_on_boton_salir_pressed"]
[connection signal="value_changed" from="OptionsMenu/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
